# iqtree3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
alignment/: CMakeLists.txt  alignment.cpp  alignment.h  alphabet_classifier.cpp  alphabet_classifier.h  maalignment.cpp  pattern.cpp  pattern.h  substitution.cpp  superalignment.cpp  superalignment.h  superalignmentunlinked.cpp  superalignmentunlinked.h
booster/: stats.c
main/: alisim.cpp  libiqtree2_fun.cpp  libiqtree2_fun.h  libiqtree_fun.h  main.cpp  phyloanalysis.cpp  phyloanalysis.h  phylotesting.cpp  phylotesting.h  treetesting.cpp
model/: CMakeLists.txt  model3di.cpp  model3di.h  modelbranch.cpp  modelbranch.h  modelcodon.cpp  modelcodon.h  modelcodonmixture.cpp  modelcodonmixture.h  modeldna.cpp  modelfactory.cpp  modelfactory.h  modelliemarkov.cpp  modelmarkov.cpp  modelmarkov.h  modelmixture.cpp  modelmixture.h  modelprotein.cpp  modelset.cpp  modelset.h  modelsubst.cpp  modelsubst.h  modeltea.cpp  modeltea.h  partitionmodel.cpp  partitionmodel.h  ratebeta.cpp  ratebeta.h  ratemeyerhaeseler.cpp
ncl/: nxsdefs.h
pda/: split.cpp
phylo-yaml/: statespace.h
scripts/: benchmark_modelfinder.sh  benchmark_partitions.R  benchmark_partitions.sh  simulate_alignments.sh  simulate_partitions.R  simulate_partitions.sh
simulator/: alisimulator.cpp  alisimulatorheterogeneity.cpp
terrace/: terrace.cpp
terraphast/include/terraces/: clamped_uint.hpp
terraphast/lib/: clamped_uint.cpp  validation.cpp
test_scripts/: test_iqtree.ps1  test_iqtree.sh  verify_memory.ps1  verify_memory.sh  verify_results.ps1  verify_runtime.ps1  verify_runtime.sh
test_scripts/test_data/: expect_ans.txt  expected_memory.tsv  expected_runtime.tsv
tree/: CMakeLists.txt  constrainttree.cpp  constrainttree.h  discordance.cpp  genometree.cpp  iqtree.cpp  iqtree.h  iqtreemix.cpp  iqtreemix.h  mexttree.cpp  mexttree.h  mtree.cpp  mtree.h  ncbitree.cpp  node.cpp  node.h  phylohmm.cpp  phylohmm.h  phylokernel.h  phylokernelbrmodel.h  phylokernelfma.cpp  phylokernelnew.h  phylokernelnonrev.h  phylokernelsitemodel.cpp  phylokernelsse.cpp  phylosuperhmm.cpp  phylosuperhmm.h  phylosupertree.cpp  phylosupertree.h  phylosupertreeplen.cpp  phylosupertreeunlinked.cpp  phylotree.cpp  phylotree.h  phylotreeavx.cpp  phylotreebrmodel.cpp  phylotreebrmodel.h  phylotreehal.cpp  phylotreehal.h  phylotreemixlen.cpp  phylotreepars.cpp  (+2 more)
utils/: CMakeLists.txt  bionj.cpp  bionj2.cpp  eigendecomposition.cpp  optimization.cpp  tools.cpp  tools.h
